# data-generator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
demo/: aiak_dataset.json  bench_dataset.jsonl  inpu_1.txt  input_0.txt
src/: cmd.rs  error.rs  generator.rs  main.rs  token_range.rs
